[package]
name = "muxado"
version = "0.6.0"
edition = "2024"
description = "Stream-multiplexing protocol (muxado) for Rust"

[dependencies]
bytes = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
rand = "0.9"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
