[package]
name = "ngrok-testing"
version = "0.1.0"
edition = "2021"

[dependencies]
muxado = { path = "../muxado" }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12"] }
rcgen = "0.12"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
