[package]
name = "ngrok"
version = "0.19.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "The ngrok agent SDK"
repository = "https://github.com/ngrok/ngrok-rust"

[features]
default = ["rustls-native-roots"]
hyper = ["dep:hyper", "dep:hyper-util", "dep:http-body-util"]
axum = ["dep:axum", "hyper"]
aws-lc-rs = ["dep:aws-lc-rs", "rustls/aws-lc-rs"]
rustls-native-roots = ["dep:rustls-native-certs"]
online-tests = []
testing = ["dep:ngrok-testing"]

[dependencies]
muxado = { path = "../muxado" }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12"] }
rustls-native-certs = { version = "0.8", optional = true }
aws-lc-rs = { version = "1", optional = true }
futures = "0.3"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
tracing = "0.1"
rand = "0.9"
hyper = { version = "1", features = ["full"], optional = true }
hyper-util = { version = "0.1", features = ["full"], optional = true }
http-body-util = { version = "0.1", optional = true }
axum = { version = "0.8", optional = true }
ngrok-testing = { path = "../ngrok-testing", optional = true }
rustls-pemfile = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
ngrok-testing = { path = "../ngrok-testing" }
tokio = { version = "1", features = ["full"] }
